# cattle-farm-poc

./: .gitignore  README.md  index.html  package.json  playwright.config.js  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  test.yml
src/css/: admin.css  auth.css  main.css  user.css
src/js/: admin.js  app.js  auth.js  game.js  user-manager.js  user.js
tests/: README.md  conftest.py  test-admin.spec.js  test-auth-login.spec.js  test-auth-register.spec.js  test-helpers.js  test-user.spec.js  test_admin.py  test_auth_login.py  test_auth_register.py  test_helpers.py  test_new_features.py  test_user.py
