[project]
name = "cattle-farm-poc-tests"
version = "1.0.0"
description = "畜牧養牛遊戲 POC - 自動化測試"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "pytest>=7.4.0",
    "pytest-playwright>=0.4.0",
    "pytest-xdist>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "auth: 認證相關測試",
    "admin: 管理員功能測試",
    "user: 使用者功能測試",
]

[tool.playwright]
browser = "chromium"
headless = true
base_url = "http://localhost:8000"
